--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/DavidAyl/employee-management#readme",
   "dependencies": {
-    "inquirer": "^8.2.2"
+    "console.table": "^0.10.0",
+    "inquirer": "^8.2.2",
+    "mysql2": "^2.3.3"
   }
 }
